--- a/Common/style/Mason.sty
+++ b/Common/style/Mason.sty
@@ -77,8 +77,10 @@
 %% Short Hand
 \newcommand{\R}{\textup{\textrm{R}}\xspace}
 \newcommand{\meb}{{\bf Garrison, S. M.}\xspace}
-\newcommand{\et}{\textit{et al}.\xspace}
-\newcommand{\eg}{\textit{e.g},\xspace}
+\newcommand{\et}{\textit{et al.}\xspace}
+\newcommand{\eg}{\textit{e.g.},\xspace}
+\newcommand{\ie}{\textit{i.e.},\xspace}
+\newcommand{\etc}{\textit{etc}\xspace}
 
 %%% Remove DOI %UNCOMMENT ALL to toggle between DOI and URL
 \usepackage{environ}
