--- a/Common/style/Mason.sty
+++ b/Common/style/Mason.sty
@@ -63,12 +63,12 @@
   keywordstyle=\color{keywordcolor},
   moredelim=[s][\color{delimcolor}]{"}{"},
 }
-
+%
 %%%%%% APA 6 overides %%%%%%
 %% Fix indents for tables
 \AtBeginEnvironment{tabular}{\noindent}
 \AtBeginEnvironment{longtable}{\noindent}
-
+%
 %----------------------------------------------------------------------------------------
 % 		Commands 
 %----------------------------------------------------------------------------------------
@@ -76,6 +76,7 @@
 \newcommand{\R}{\textup{\textrm{R}}\xspace}
 \newcommand{\meb}{{\bf Garrison, S. M.}\xspace}
 \newcommand{\et}{\textit{et al.}\xspace}
+\newcommand{\etal}{\et}
 \newcommand{\eg}{\textit{e.g.}\xspace}
 \newcommand{\ie}{\textit{i.e.}\xspace}
 \newcommand{\etc}{\textit{etc}\xspace}
